--- a/LYNc-figma/src/Styles/Midsection.scss
+++ b/LYNc-figma/src/Styles/Midsection.scss
@@ -1,185 +1,285 @@
-.top-box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 95%;
-  margin-left: 1%;
-
-  .pos-eth {
-    position: absolute;
-    right: 0;
-  }
-}
-
-.container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 20px;
-  margin: auto;
-  margin-top: 50px;
-  width: 100%;
-}
-
-.card-box {
-  position: relative;
-  width: 40vw;
-  box-sizing: border-box;
-  background-color: transparent;
-  border-radius: 10px;
-  overflow: hidden;
-
-  .boxcard-img {
-    display: block;
-    width: 100%;
-    border-radius: 10px;
-    margin-left: 15%;
-  }
-
-  .content {
-    position: absolute;
-    top: 10%;
-    left: 20%;
-    color: white;
-    z-index: 2;
-
-    h3,
-    h2,
-    button {
-      margin: 10px 0;
-      width: 60%;
+.midsection {
+  .top-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 95%;
+    margin-left: 2%;
+    .pos-eth {
+      position: absolute;
+      right: 2%;
+      // border: 1px solid red;
+     
     }
-
-    h3 {
-      font-size: 1.5rem;
-    }
-
-    h2 {
-      font-size: 1.2rem;
-    }
-
-    button {
-      display: inline-block;
-      margin-top: 20px;
-      color: black;
-      padding: 9px 15px;
-      border-radius: 10px;
-      background-color: white;
-      width: 30%;
-    }
-  }
-
-  .dummy-img {
-    position: absolute;
-    top: 10%;
-    right: -15%;
-    bottom: 2%;
-    z-index: 1;
-
     img {
-      width: 80%;
-      border-radius: 10px;
-    }
-  }
-}
-
-.number-txt-box {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-
-  .first-box,
-  .second-box {
-    position: relative;
-    width: 57%;
-
-    .rectangle-image {
       width: 100%;
-      border-radius: 10px;
-      margin-left: -35px;
-    }
-
-    .number-txt {
-      position: absolute;
-      top: 50%;
-      left: 40%;
-      transform: translate(-50%, -50%);
-      color: white;
-      padding: 10px;
-      margin-top: 5px;
-
-      p {
-        margin: 0;
-        font-size: 1.1rem;
-        width: 100%;
-        height: 115px;
-        color: grey;
-      }
-
-      h3 {
-        font-size: 24px;
-        color: blue;
-      }
+      max-width: 940px; 
     }
   }
-}
 
-.color-txt-num h3 {
-  background: linear-gradient(
-    90deg,
-    hsla(328, 75%, 45%, 1) 0%,
-    hsla(298, 83%, 39%, 1) 46%
-  );
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  color: transparent;
-}
+  .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+    margin: auto;
+    margin-top: 50px;
+    width: 90%; 
+  }
 
-.number-txt-box1 {
-  .first-box {
+  .card-box {
     position: relative;
-    width: 100%;
+    width: 100%; 
+    box-sizing: border-box;
+    background-color: transparent;
+    border-radius: 10px;
+    overflow: hidden;
 
-    .rectangle-image1 {
-      width: 85%;
+    .boxcard-img {
+      display: block;
+      width: 100%;
+      height: 430px;
       border-radius: 10px;
-      margin-left: -40px;
-      height: 330px;
+      margin-left: 0;
     }
 
-    .number-txt1 {
+    .content {
       position: absolute;
-      top: 0;
-      left: 30%;
-      transform: translate(-50%, 0);
+      top: 10%;
+      left: 10%;
       color: white;
-      padding: 10px;
-      text-align: center;
-
-      p {
-        margin: 0;
-        font-size: 1.1rem;
-        width: 100%;
-        color: grey;
+      z-index: 2;
+      h3, h2, button {
+        margin: 10px 0;
       }
-
       h3 {
-        font-size: 24px;
-        color: blue;
+        font-size: 1.5rem;
+      }
+      h2 {
+        font-size: 1.2rem;
+      }
+      button {
+        display: inline-block;
+        margin-top: 20px;
+        color: black;
+        padding: 9px 15px;
+        border-radius: 10px;
+        background-color: white;
       }
     }
 
     .dummy-img {
       position: absolute;
-      right: 8%;
-      bottom: 5%;
+      top: 30%;
+      right: -15%;
+     
       z-index: 1;
-
       img {
-        width: 80%;
+        width: 70%;
         border-radius: 10px;
+        height:200px;
       }
     }
   }
-}
+
+  .number-txt-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    .first-box, .second-box {
+      position: relative;
+      width: 80%;
+      .rectangle-image {
+        width: 100%;
+        border-radius: 10px;
+      }
+      .number-txt {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: white;
+        padding: 10px;
+        text-align: center;
+        p {
+          margin: 0;
+          font-size: 1.1rem;
+        }
+        h3 {
+          font-size: 24px;
+          color: blue;
+        }
+      }
+    }
+  }
+
+  .color-txt-num h3 {
+    background: linear-gradient(
+      90deg,
+      hsla(328, 75%, 45%, 1) 0%,
+      hsla(298, 83%, 39%, 1) 46%
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    color: transparent;
+  }
+
+  .number-txt-box1 {
+    .first-box {
+      position: relative;
+      width: 80%;
+      .rectangle-image1 {
+        // width: 100%;
+        border-radius: 10px;
+        height:430px; 
+      }
+      .number-txt1 {
+        position: absolute;
+        top: 10%;
+        left: 50%;
+        transform: translate(-50%, 0);
+        color: white;
+        padding: 10px;
+        text-align: center;
+        p {
+          margin: 0;
+          font-size: 1.1rem;
+        }
+        h3 {
+          font-size: 24px;
+          color: blue;
+        }
+      }
+      .dummy-img {
+        position: absolute;
+        right: 10%;
+        bottom: 5%;
+        z-index: 1;
+        img {
+          width: 70%;
+          border-radius: 10px;
+        }
+      }
+    }
+  }
+
+  // Tablet view
+  @media (max-width: 768px) {
+    .top-box {
+    .pos-eth {
+      // display: none;
+      position: absolute;
+      right: -25%;
+    }
+    
+  }
+     
+    .container {
+      grid-template-columns: 1fr ;
+      gap: 15px;
+    }
+    .card-box {
+      .content {
+        h3 {
+          font-size: 1.2rem;
+        }
+        h2 {
+          font-size: 1rem;
+        }
+        button {
+          width: 40%;
+        }
+      }
+      .dummy-img img {
+        width: 60%;
+      }
+    }
+    .number-txt-box, .number-txt-box1 {
+      .first-box, .second-box {
+        .number-txt {
+          h3 {
+            font-size: 1.2rem;
+          }
+          p {
+            font-size: 0.9rem;
+          }
+        }
+      }
+      .first-box .number-txt1 {
+        h3 {
+          font-size: 1.2rem;
+        }
+        p {
+          font-size: 0.9rem;
+        }
+      }
+    }
+  }
+
+  // Mobile view
+  @media (max-width: 480px) {
+      .top-box {
+    .pos-eth {
+      display: none;
+    }
+    
+  }
+     
+    .container {
+      grid-template-columns: 1fr;
+      gap: 10px;
+    }
+    .card-box {
+      .content {
+        h3 {
+          font-size: 1rem;
+        }
+        h2 {
+          font-size: 0.8rem;
+        }
+        button {
+          width: 50%;
+        }
+      }
+      .dummy-img img {
+        width: 50%;
+      }
+    }
+    .rectangle-image1{
+              border-radius: 10px;
+          width: 100%;
+          padding-left: 30px;
+    }
+    .number-txt-box, .number-txt-box1 {
+      .first-box,
+
+        .second-box {
+        
+        .number-txt {
+          h3 {
+            font-size: 1.2rem;
+          }
+          p {
+            font-size: 0.9rem;
+          }
+        }
+      }
+      .first-box .number-txt1 {
+        h3 {
+          font-size: 1rem;
+        }
+        p {
+          font-size: 0.8rem;
+        }
+      }
+    }
+  }
+      } 
+
+ @media (max-width: 1200px) {
+  .container{
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+ }
