--- a/LYNc-figma/src/Styles/Headersection.scss
+++ b/LYNc-figma/src/Styles/Headersection.scss
@@ -166,9 +166,7 @@
           }
 
           .arrow-icon1 {
-            top: -36%;
-            left: 84%;
-            transform: translateY(-50%);
+           display: none;
           }
           
         }
