--- a/LYNc-figma/src/index.css
+++ b/LYNc-figma/src/index.css
@@ -1,19 +1,15 @@
 body {
   background-color: #04081f;
-
+  text-align: center;
   color: whitesmoke;
- 
+  width: 100%;
 }
-*{
+* {
   margin: none;
   padding: none;
+  box-sizing: border-box;
+}
+
+
+   
   
-}
-h1,h2,p{
-  text-align: center;
-}
- @media (max-width: 768px) {
-   body{
-    margin-left: 10%;
-   }
- }
