--- a/LYNc-figma/src/Styles/Cardsection.scss
+++ b/LYNc-figma/src/Styles/Cardsection.scss
@@ -7,6 +7,7 @@
 
   .txt-cen {
     text-align: center;
+    margin-bottom: 70px;
   }
 
   .text-box-style {
@@ -83,13 +84,14 @@
 
     @media (max-width: 768px) {
       grid-template-columns: repeat(2, 1fr);
-     
-      padding-left: 0;
+
+      // padding-left: 0;
     }
 
     @media (max-width: 480px) {
       grid-template-columns: repeat(1, 1fr);
-      gap: 20px;
+      gap: 30px;
+      padding: 0;
     }
 
     div {
