--- a/LYNc-figma/src/Styles/Headersection.scss
+++ b/LYNc-figma/src/Styles/Headersection.scss
@@ -84,7 +84,6 @@
     p {
       font-weight: bold;
       font-size: x-large;
-      
     }
 
     .btn-row {
@@ -109,7 +108,6 @@
           top: 16.2%;
           left: -14%;
         }
-       
       }
 
       .btn-col1 {
@@ -166,9 +164,8 @@
           }
 
           .arrow-icon1 {
-           display: none;
+            display: none;
           }
-          
         }
       }
     }
@@ -189,6 +186,8 @@
     .text-box {
       h1 {
         font-size: 40px;
+        position: absolute;
+        top: 16%;
       }
     }
 
@@ -209,6 +208,10 @@
   }
 
   @media (max-width: 480px) {
+    // position: absolute;
+    // top: -70%;
+    // border: 1px solid red;
+
     .first-rect-box,
     .third-rect-box {
       width: 35%;
@@ -219,16 +222,29 @@
       left: 0;
     }
 
-    .text-box {
-      h1 {
-        font-size: 30px;
-      }
+    img {
+      width: 50vw;
     }
+    .first-rect-box {
+      width: 100%;
+      border: 1px oslid red;
+      display: flex;
+      justify-content: left;
+      align-items: center;
+      gap: 50px;
+      display: block;
+    }
+    // .text-box {
+    //   h1 {
+    //     font-size: 25px;
+    //   }
+    // }
 
     .txt-web {
+      position: absolute;
+      top: 55%;
       p {
-        font-size: small;
-        margin-bottom: 50px;
+        font-size: 15px;
       }
 
       .btn-row {
@@ -257,7 +273,7 @@
   .three-img-box {
     margin-top: 15px;
     // width: 100%;
-    height: 80px;
+    height: 110px;
     gap: 40px;
     border-radius: 50px;
     padding-left: 15px;
@@ -265,6 +281,7 @@
     box-shadow: 0 0 0 0.5px rgb(255, 255, 255);
 
     .img-row {
+      padding: 20px;
       display: flex;
       gap: 35px;
       justify-content: center;
@@ -285,14 +302,24 @@
 
     .three-img-box {
       gap: 20px;
+      height: 80px;
 
       .img-row {
+        width: auto;
         display: flex;
-        flex-direction: column;
+        // flex-direction: column;
         gap: 30px;
         justify-content: center;
         align-items: center;
+        img {
+          width: 21vw;
+        }
       }
+    }
+    .txt-back {
+      position: absolute;
+      margin-left: 0;
+      top: 130%;
     }
   }
 
@@ -304,9 +331,8 @@
       .txt-back {
         z-index: none;
         width: 10%;
-        border: 1px solid yellow;
+        // border: 1px solid yellow;
       }
-      
     }
   }
 }
@@ -420,10 +446,7 @@
     width: 95%;
 
     .txt-font {
-      font-size: 14px;
-      margin: auto;
-      position: relative;
-      top: 80px;
+      font-size: 15px;
     }
 
     .txt-font2 {
@@ -432,7 +455,7 @@
 
     .img-flex-item {
       flex-direction: column;
-      gap: 20px;
+      gap: 50px;
       position: static;
     }
 
@@ -441,7 +464,8 @@
     }
 
     .txt-3d {
-      font-size: 16px;
+      margin-top: 50px;
+      font-size: 17px;
     }
   }
 }
