--- a/LYNc-figma/src/Styles/Midsection.scss
+++ b/LYNc-figma/src/Styles/Midsection.scss
@@ -39,7 +39,7 @@
     .top-box {
       .pos-eth {
         position: absolute;
-        right: -24%;
+        // right: -24%;
         // border: 1px solid red;
       }
     }
