--- a/LYNc-figma/src/Styles/Footersection.scss
+++ b/LYNc-figma/src/Styles/Footersection.scss
@@ -2,15 +2,17 @@
   position: relative;
   margin-top: 15%;
   width: 98%;
+  
 }
 
 .image-container {
   position: relative;
-
+  
   img {
     width: 100%;
     height: auto;
     display: block;
+  
   }
 }
 
@@ -32,6 +34,7 @@
 
     @media (max-width: 768px) {
       font-size: 6rem;
+      margin-top: 90px;
     }
 
     @media (max-width: 480px) {
@@ -47,7 +50,7 @@
     color: white;
     margin-bottom: 20px;
     position: absolute;
-    top: 55%;
+    top: 72%;
 
     @media (max-width: 768px) {
       font-size: 1.5rem;
@@ -81,8 +84,10 @@
     }
 
     @media (max-width: 480px) {
-      margin-top: 30%;
+      margin-top: 5%;
       padding: 6px 12px;
+      font-size: 20px;
+     
     }
   }
 }
@@ -96,7 +101,7 @@
   display: inline-block;
   letter-spacing: 3px;
   opacity: calc(80%);
-
+ margin-top: 50%;
   &::before {
     content: "LYNC";
     position: absolute;
@@ -121,13 +126,13 @@
   width: 100%;
   height: 100px;
   position: absolute;
-  top: 20%;
+  top: 45%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
   padding: 20px 0;
-
+ 
   .txt-icon-box {
     text-align: center;
     margin-bottom: 20px;
@@ -137,10 +142,16 @@
 
       @media (max-width: 768px) {
         font-size: 30px;
+        
+        .txt-icon-box{
+          margin-top: 50%;
+        }
+        
       }
 
       @media (max-width: 480px) {
         margin-top: 60%;
+        
       }
     }
 
@@ -150,6 +161,7 @@
 
       @media (max-width: 768px) {
         font-size: 16px;
+        
       }
 
       @media (max-width: 480px) {
@@ -165,7 +177,7 @@
       @media (max-width: 480px) {
         margin-top: 10%;
         justify-content: center;
-        gap: 50px;
+        gap: 57px;
       }
     }
   }
