--- a/LYNc-figma/src/Styles/Navbar.scss
+++ b/LYNc-figma/src/Styles/Navbar.scss
@@ -1,17 +1,19 @@
 .navbar {
-  background-color: #291451;
+  background-color: #211343;
   border-radius: 30px;
   box-shadow: 0 0 0 0.5px rgb(255, 255, 255);
   margin: 60px auto 0;
   position: relative;
   width: 98%;
 
+  // border: 1px solid red;
   &__container {
     align-items: center;
     display: flex;
     height: 60px;
     justify-content: space-between;
     padding: 0 20px;
+    // border: 1px solid blue;
 
     @media (min-width: 769px) {
       justify-content: space-between;
