--- a/LYNc-figma/src/index.css
+++ b/LYNc-figma/src/index.css
@@ -2,14 +2,36 @@ body {
   background-color: #04081f;
   text-align: center;
   color: whitesmoke;
+  background-image: url("./assets/Grid.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  z-index: 1;
+  margin: 0;
+  padding: 0;
+}
+
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(4, 8, 31, 0.9);
+  z-index: -1;
 }
 * {
-  margin: none;
-  padding: none;
+  margin: 0;
+  padding: 0;
 }
-.App{
+
+.App {
   width: 100%;
   height: auto;
   margin: auto;
-  /* border: 1px solid red; */
+  position: relative;
+  z-index: 2;
+  border: 1px solid transparent;
 }
