--- a/LYNc-figma/src/Styles/Animationcard.scss
+++ b/LYNc-figma/src/Styles/Animationcard.scss
@@ -5,9 +5,10 @@
   align-items: center;
   justify-content: center;
   gap: 20px;
+  
 
   @media (max-width: 768px) {
-    flex-direction: column;
+    flex-direction: column; 
   }
 }
 
@@ -70,23 +71,26 @@
 
 .additional-content {
   display: flex;
-  // flex-direction: column;
+  // flex-direction: column; 
   gap: 20px;
   align-items: center;
   justify-content: center;
+ width:auto;
 
   @media (min-width: 768px) {
+    
     flex-direction: column;
     justify-content: center;
   }
-
+ 
+    
   .rectangle-box {
     background-image: url("../assets/Rectanglecard.png");
     background-size: cover;
     background-position: center;
     width: 90%;
     max-width: 280px;
-    height: 160px;
+    height: 170px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -108,6 +112,11 @@
     }
   }
 }
+ @media(mix-width:468px) {
+   .rectangle-box{
+    width: 80%;
+   }
+ }
 
 .square-card-container {
   background-image: url("../assets/squarecard.png");
@@ -145,17 +154,13 @@
     right: 0;
     width: 200px;
     height: 200px;
-    animation: float 4s infinite;
+    animation: float 4s infinite; // Apply float animation
   }
 }
 
 // Keyframe animations
 @keyframes bounce {
-  0%,
-  20%,
-  50%,
-  80%,
-  100% {
+  0%, 20%, 50%, 80%, 100% {
     transform: translateY(0);
   }
   40% {
@@ -167,8 +172,7 @@
 }
 
 @keyframes float {
-  0%,
-  100% {
+  0%, 100% {
     transform: translateY(0);
   }
   50% {
@@ -191,5 +195,5 @@
 
 body {
   margin: 0;
-  overflow-x: hidden;
+  overflow-x: hidden; 
 }
