--- a/LYNc-figma/src/Styles/Animationcard.scss
+++ b/LYNc-figma/src/Styles/Animationcard.scss
@@ -112,11 +112,7 @@
     }
   }
 }
- @media(mix-width:468px) {
-   .rectangle-box{
-    width: 80%;
-   }
- }
+
 
 .square-card-container {
   background-image: url("../assets/squarecard.png");
@@ -154,7 +150,7 @@
     right: 0;
     width: 200px;
     height: 200px;
-    animation: float 4s infinite; // Apply float animation
+    animation: float 4s infinite; 
   }
 }
 
@@ -190,211 +186,16 @@
   .crypto-image {
     width: 100px;
     height: 100px;
+  }
+  .main-box-animation,
+  .additional-content {
+    flex-direction: column;
+    width: 90%;
+    margin: auto;
   }
 }
 
 body {
   margin: 0;
   overflow-x: hidden; 
-}
-.main-box-animation {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-  padding: 0 5px; 
-
-  @media (max-width: 768px) {
-    flex-direction: column;
-  }
-}
-
-.content-box {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-}
-
-.boxcard-background {
-  background-image: url("../assets/boxcard.png");
-  background-size: cover;
-  background-position: center;
-  width: 90%;
-  max-width: 500px;
-  height: 330px;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  padding: 20px;
-  border-radius: 40px;
-
-  h3 {
-    width: 70%;
-    font-size: 30px;
-  }
-
-  p {
-    width: 60%;
-    margin-top: 20px;
-    color: grey;
-    font-size: 15px;
-  }
-
-  button {
-    padding: 5px 10px;
-    border-radius: 5px;
-    margin-top: 30px;
-  }
-
-  h3,
-  p,
-  button {
-    position: relative;
-    z-index: 1;
-  }
-
-  .game-img {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    width: 30%;
-    height: 200px;
-    animation: bounce 3s infinite;
-  }
-}
-
-.additional-content {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  padding: 0 5px; 
-
-  @media (min-width: 768px) {
-    flex-direction: row;
-    justify-content: center;
-  }
-
-  .rectangle-box {
-    background-image: url("../assets/Rectanglecard.png");
-    background-size: cover;
-    background-position: center;
-    width: 90%;
-    max-width: 280px;
-    height: 170px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    padding: 20px;
-    box-sizing: border-box;
-    margin-top: 10px;
-    border-radius: 40px;
-
-    h2 {
-      margin: 0;
-      font-size: 2em;
-    }
-
-    p {
-      margin: 0;
-      font-size: 1em;
-    }
-  }
-}
-
-@media (max-width: 468px) {
-  .rectangle-box {
-    width: 80%;
-  }
-}
-
-.square-card-container {
-  background-image: url("../assets/squarecard.png");
-  background-size: cover;
-  background-position: center;
-  width: 90%;
-  max-width: 300px;
-  height: 360px;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  color: white;
-  padding: 20px;
-  box-sizing: border-box;
-  border-radius: 40px;
-
-  .content {
-    position: absolute;
-    top: 15%;
-
-    h2 {
-      font-size: 2em;
-    }
-
-    p {
-      font-size: 1em;
-    }
-  }
-
-  .crypto-image {
-    position: absolute;
-    bottom: 2%;
-    right: 0;
-    width: 200px;
-    height: 200px;
-    animation: float 4s infinite;
-  }
-}
-
-// Keyframe animations
-@keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
-    transform: translateY(0);
-  }
-  40% {
-    transform: translateY(-30px);
-  }
-  60% {
-    transform: translateY(-15px);
-  }
-}
-
-@keyframes float {
-  0%, 100% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-20px);
-  }
-}
-
-@media (max-width: 768px) {
-  .square-card-container,
-  .rectangle-box,
-  .boxcard-background {
-    width: 90%;
-  }
-
-  .crypto-image {
-    width: 100px;
-    height: 100px;
-  }
-}
-
-body {
-  margin: 0;
-  overflow-x: hidden;
-  padding: 0;
 }
