--- a/LYNc-figma/src/Styles/Animationcard.scss
+++ b/LYNc-figma/src/Styles/Animationcard.scss
@@ -31,7 +31,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  padding: 20px;
+  padding: 15px;
   border-radius: 40px;
 
   h3 {
@@ -96,7 +96,7 @@
     justify-content: center;
     align-items: center;
     color: white;
-    padding: 20px;
+    padding: auto;
     box-sizing: border-box;
     margin-top: 10px;
     border-radius: 40px;
@@ -127,7 +127,7 @@
   align-items: center;
   text-align: center;
   color: white;
-  padding: 20px;
+  padding:auto;
   box-sizing: border-box;
   border-radius: 40px;
 
